--- a/Gallery/src/App.css
+++ b/Gallery/src/App.css
@@ -1,3 +1,19 @@
+.container{
+  width: 100vw;
+  height: 125px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #494031;
+}
+
+*{
+  background-color: #494031;
+}
+
+.container img{
+  object-fit: contain;
+}
 
 .gallery{
   margin: 0 auto;
@@ -14,3 +30,93 @@ img{
   /* height: auto; */
   object-fit: fill;
 }
+
+.header{
+  height: 125px;
+  width: 75%;
+  position: relative;
+  background-color: #494031;
+  z-index: -2;
+}
+
+h1{
+  color: #699832;
+  position: absolute;
+  left: 38%;
+  top: 0vh;
+  font-size: 1rem;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+h5{
+  position: absolute;
+  left: 43%;
+  top: 7vh;
+  font-size: .9rem;
+}
+
+.blackBox{
+  position: absolute;
+  width: 100px;
+  height: 85px;
+  background-color: black;
+  border: 1px solid #594F49;
+  z-index: -1;
+  left: 35%;
+  top: 10%;
+  margin-top: 5px;
+}
+
+.leftSide{
+  width: 25%;
+  border-right: 1px solid white;
+}
+
+.border{
+  border-right: 1px solid white;
+  position: absolute;
+  left: 50%;
+  top: 10%;
+  height: 100px;
+  opacity: 50%;
+}
+
+.locationInfo{
+  position: absolute;
+  right: 20%;
+  top: 5%;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+.companyName{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 3.1rem;
+  position: absolute;
+  right: 5%;
+  top: 2.9vh;
+  color: #729539;
+  -webkit-text-stroke: .5px  #E2EAB8;
+}
+
+.numberRefaced{
+  position: absolute;
+  left: 61%;
+  top: 70%;
+  font-size: 1.5rem;
+}
+
+h2{
+  text-align: center;
+  font-size: 2.5em;
+  font-family:Arial, Helvetica, sans-serif
+}
+
+cite{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-top: -15px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid black;
+}
+
