--- a/Gallery/src/App.css
+++ b/Gallery/src/App.css
@@ -182,11 +182,14 @@ h5{
 h2{
   text-align: center;
   font-size: 2.5em;
-  font-family:Arial, Helvetica, sans-serif
+  font-family:Arial, Helvetica, sans-serif;
+  background-color: transparent;
+  -webkit-text-stroke: 2px black;
 }
 
 blockquote{
   text-align: center;
+  background-color: transparent;
 }
 
 cite{
@@ -196,8 +199,16 @@ cite{
   margin-top: -15px;
   padding-bottom: 20px;
   border-bottom: 1px solid white;
+  background-color: transparent;
+}
+
+i{
+  background-color: transparent;
 }
 
 .reviews{
   color: white;
+  background-color: transparent;
+  /* https://www.pexels.com/photo/brown-parquet-172276/ */
+  background-image: url('./images/woodBG.jpeg');
 }
