--- a/Gallery/src/App.css
+++ b/Gallery/src/App.css
@@ -11,7 +11,6 @@
   justify-content: center;
   align-items: center;
   background-color: #494031;
-  
   margin: 0 0;
   padding: 0 0;
 }
@@ -22,6 +21,23 @@
 
 .container img{
   object-fit: contain;
+}
+
+a{
+  height: 25px;
+  width: 150px;
+  background-color: white;
+  position: fixed;
+  right: 1%;
+  bottom: 1%;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  border: 1px solid black;
+  color: black;
+  font-size: 18px;
+  text-decoration: none;
+  align-items: center;
 }
 
 .gallery{
@@ -210,5 +226,5 @@ i{
   color: white;
   background-color: transparent;
   /* https://www.pexels.com/photo/brown-parquet-172276/ */
-  background-image: url('./images/woodBG.jpeg');
+  /* background-image: url('./images/woodBG.jpeg'); */
 }
