Added images for the next section

--- a/portofino-tile/src/App.css
+++ b/portofino-tile/src/App.css
@@ -73,6 +73,7 @@ img{
 }
 
 .container{
+  z-index: 1;
   margin: 0;
   padding: 0;
   position: absolute;
@@ -81,15 +82,18 @@ img{
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  background: linear-gradient(to bottom,rgba(0,0,0,.8) 0,rgba(0,0,0,0) 100%);
+  
 }
 
 .header{
+  z-index: 1;
   width: 100%;
   display: flex;
+  background: linear-gradient(to bottom,rgba(0,0,0,.8) 0,rgba(0,0,0,0) 100%);
 }
 
 .call{
+  z-index: 1;
   background-color: #CCC19F;
   height: 50%;
   display: flex;
