--- a/portofino-tile/src/styles/Home.css
+++ b/portofino-tile/src/styles/Home.css
@@ -144,14 +144,14 @@ img {
 
 
 
-.ba {
-  background-image: url("../images/beforeAndAfterHome.jpg");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 100%;
+/* .ba { */
+  /* background-image: url("../images/beforeAndAfterHome.jpg"); */
+  /* background-position: center; */
+  /* background-size: cover; */
+  /* background-repeat: no-repeat; */
+  /* width: 100%; */
   /* height: 100%; */
-}
+/* } */
 
 .reviews{
     background-image: url("../images/reviewsHome.jpg");
@@ -201,7 +201,10 @@ img {
 .gridHeader{
   font-size: 50px;
   color: white;
+  font-weight: bold;
   text-align: center;
+  text-shadow: 7px 7px 0px rgba(0,0,0, 0.3);
+  -webkit-text-stroke: .75px black;
 }
 
 article p{
@@ -225,3 +228,105 @@ article p{
   left: 50%;
   transform: translate(-50%);
 }
+
+/* .gridHidden{
+  display: none;
+}
+
+.ba:hover .gridHidden{
+  animation: 1s reveal forwards;
+}
+
+@keyframes reveal {
+  0%{
+    display: none;
+  }
+  100%{
+    display: flex;
+    flex-direction: column;
+  }
+} */
+
+.ba {
+  position: relative;
+}
+
+.ba img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -2;
+}
+
+.ba:hover .gridHidden{
+  display: block;
+  animation: reveal 1s ease-in-out forwards;
+}
+
+.ba:hover{
+  animation: gridBackgroundChange 1s ease-in-out forwards;
+}
+
+/* .gridContainer img{
+  width: 100%;
+  position: relative;
+} */
+/* .gridElement img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+  transition: transform 0.3s ease-in-out;
+} */
+
+/* .ba img {
+  position: absolute;
+  object-fit: cover;
+  width: 100%;
+} */
+
+@keyframes gridBackgroundChange {
+  0%{
+    /* scale: 1; */
+    background-color: transparent;
+  }
+  100%{
+    
+    background-color: rgba(0,0,0, 0.5);
+    /* scale: 1.2;
+    overflow: hidden; */
+  }
+}
+
+.gridHidden{
+  display: none;
+  animation: hide 1s ease-in-out forwards;
+}
+
+@keyframes reveal {
+  0% {
+    opacity: 0;
+    background-color: transparent;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes hide {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
